Fixed bug #7831: List in Page module has wrong colors, credits Steffen Kamper
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@3502 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/typo3-db-list-php.css
+++ b/typo3/sysext/t3skin/stylesheets/typo3-db-list-php.css
@@ -2,31 +2,37 @@
  *	typo3-db-list-php.css
  */
 
-table.typo3-dblist {
+table.typo3-dblist,
+table.typo3-page-stdlist {
 	margin-top: 10px;
 	border: 1px solid #A2AAB8;
 }
 
-table.typo3-dblist tr td.db_list_alt {
+table.typo3-dblist tr td.db_list_alt,
+typo3-page-stdlist tr td.db_list_alt {
 	background-color: #E4E5F0;
 }
 
+table.typo3-page-stdlist .bgColor4,
 table#typo3-dblist-top table.bgColor4 {
 	background-color: #EFEFF4;
 }
 
-table.typo3-dblist td.c-headLineTable {
+table.typo3-dblist td.c-headLineTable,
+table.typo3-page-stdlist td.c-headLineTable {
 	background-color: #B8BEC9;
 	background-image: url('../icons/gfx/alt_menu_mainitem_bg.gif');
 	background-repeat: repeat-x;
 }
 
-table.typo3-dblist td.c-headLineTable a {
+table.typo3-dblist td.c-headLineTable a,
+table.typo3-page-stdlist td.c-headLineTable a {
 	font-weight: bold;
 	color: #FFFFFF;
 }
 
-table.typo3-dblist tr td.c-headLine {
+table.typo3-dblist tr td.c-headLine,
+table.typo3-page-stdlist tr td.c-headLine {
 	height: 24px;
 	background-color: #EFEFF4;
 	background-image: url(../backgrounds/list_sep.gif);
@@ -34,20 +40,25 @@ table.typo3-dblist tr td.c-headLine {
 	background-repeat: repeat-x;
 }
 
-table.typo3-dblist td.c-table-row-spacer {
+table.typo3-dblist td.c-table-row-spacer,
+table.typo3-page-stdlist td.c-table-row-spacer {
 	display: none;
 }
 
 table.typo3-dblist tr:hover,
-table.typo3-dblist tr:hover td.db_list_alt {
+table.typo3-dblist tr:hover td.db_list_alt,
+table.typo3-page-stdlist tr:hover,
+table.typo3-page-stdlist tr:hover td.db_list_alt {
 	background-color: #d7dbe2;
 }
 
-table.typo3-dblist tr td div.typo3-DBctrl {
+table.typo3-dblist tr td div.typo3-DBctrl,
+table.typo3-page-stdlist tr td div.typo3-DBctrl {
 	background-color: transparent;
 }
 
-table.typo3-dblist tr td div.typo3-clipCtrl {
+table.typo3-dblist tr td div.typo3-clipCtrl,
+table.typo3-page-stdlist tr td div.typo3-clipCtrl {
 	background-color: transparent;
 	border: 1px solid #D0D4DB;
 	margin: 1px 1px 1px 10px;
